Implement speaking service
